--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
 
-    <div class="container-fluid row align-items-center justify-content-center text-center text-white bg-primary py-4 h1">CapacityBay Cohort 3</div>
-    <div class="container-fluid">
+    <div class="container-fluid  text-center text-white bg-primary py-4 h1">CapacityBay Cohort 3</div>
+    <div class="container-fluid ">
         <div class="row p-5 justify-content-center align-items-center gutter-2">
             <img src="./img/laptop1.jpg" alt="laptop"  class="col-md-6">
             <div class="col-md-6">
@@ -48,10 +48,11 @@
 
         </div>
     </div>
+    
 
     <div class="container-fluid">
         <div class="row p-5 justify-content-center align-items-center gutter-2">
-            <img src="./img/silkroad.jpeg" alt="laptop"  class="col-md-6">
+            <img src="./img/silkroad.jpeg" alt="silkroad"  class="col-md-6">
             <div class="col-md-6">
                 <p class="h2 pt-4">How to create Responsive Website with Bootstrap</p>
                 <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quam veniam quasi eligendi pariatur, exercitationem recusandae temporibus aperiam nulla error.</p>
