--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         </div>
     </div>
-    <div class="container-fluid row align-items-center justify-content-center text-center text-white bg-primary py-4">&copy;CapacityBayCohort3</div>
+    <div class="container-fluid align-items-center justify-content-center text-center text-white bg-primary py-4">&copy;CapacityBayCohort3</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
